--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 PORT=3101 # The port you want to use
-VOICEFLOW_PROJECT_ID=xxxxxxxxxxxx # Your VF project ID
-VOICEFLOW_VERSION_ID=development # production or development
-VOICEFLOW_API_KEY=VF.DM.XXX # Your VF API key
+VOICEFLOW_PROJECT_ID=66ae04ccb29eebec3c8da4d7 # Your VF project ID
+VOICEFLOW_VERSION_ID=66ae04ccb29eebec3c8da4d8 # production or development
+VOICEFLOW_API_KEY=VF.DM.VF.DM.66ae08b157fab51f9093855d.dCCeMuxq7kodTP1u # Your VF API key
 VOICEFLOW_DOMAIN= # Your VF domain (Private Cloud only)
